Try to fix incorrect line truncation of long URLs in visitor profile.

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -201,3 +201,13 @@ a.visitor-log-visitor-profile-link {
         vertical-align:top;
     }
 }
+
+.action-list-action-icon {
+    float:left;
+    margin-right:4px;
+    margin-top:2px;
+}
+
+.action-list-url {
+    display:block;
+}
